Update and rename 2020-07-09-post-example-with-headings-and-toc.md to 2025-06-11-mop.md

--- a/_posts/2025-06-11-mop.md
+++ b/_posts/2025-06-11-mop.md
@@ -2,7 +2,7 @@
 layout: post
 ---
 
-Mauris viverra dictum ultricies. Vestibulum quis ipsum euismod, facilisis metus sed, varius ipsum. Donec scelerisque lacus libero, eu dignissim sem venenatis at. Nunc a egestas tortor, sed feugiat leo.
+MAA’s Mathematical Olympiad Program (MOP '25) is at the *Illinois Mathematics and Science Academy* (IMSA) from June 11--Jul 2, 2025.
 
 ## Table of contents
 - [Table of contents](#table-of-contents)
@@ -10,11 +10,22 @@ Mauris viverra dictum ultricies. Vestibulum quis ipsum euismod, facilisis metus 
 - [The middle](#the-middle)
 - [The end](#the-end)
 
-Mauris viverra dictum ultricies. Vestibulum quis ipsum euismod, facilisis metus sed, varius ipsum. Donec scelerisque lacus libero, eu dignissim sem venenatis at. Nunc a egestas tortor, sed feugiat leo. Vestibulum porta tincidunt tellus, vitae ornare tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed nunc neque, tempor in iaculis non, faucibus et metus. Etiam id nisl ut lorem gravida euismod.
+Reached Chicago a few days early and stayed at *The Chicago Marriott Southwest at Burr Ridge* – fantastic hotel! Our room overlooked a beautiful view with a pond within a lush green rolling meadow. Dinner on Sunday was pizza at _Stix and Stones_ which was incredible. On Monday I met with Isaac at Univ. of Chicago. In the evening, we had a fabulous dinner at _Kama Bistro_ --- black pepper lamb and achari chicken. I met with Arun on Tuesday at _Cupitol Coffee & Eatery_. We then had lunch at _Momo Factory_. Wednesday morning, mama and baba dropped me off at Terminal 2 of the Chicago O'Hare International Airport for the 1145AM shuttle to IMSA.
 
-## [The start](#the-start)
+## [Day 1](#day-1)
 
-Fusce non velit cursus ligula mattis convallis vel at metus. Sed pharetra tellus massa, non elementum eros vulputate non. Suspendisse potenti. Quisque arcu felis, laoreet vel accumsan sit amet, fermentum at nunc. Sed massa quam, auctor in eros quis, porttitor tincidunt orci. Nulla convallis id sapien ornare viverra. Cras nec est lacinia ligula porta tincidunt. Nam a est eget ligula pellentesque posuere. Maecenas quis enim ac risus accumsan scelerisque. Aliquam vitae libero sapien. Etiam convallis, metus nec suscipit condimentum, quam massa congue velit, sit amet sollicitudin nisi tortor a lectus. Cras a arcu enim. Suspendisse hendrerit euismod est ac gravida. Donec vitae elit tristique, suscipit eros at, aliquam augue. In ac faucibus dui. Sed tempor lacus tristique elit sagittis, vitae tempor massa convallis.
+**Wednedsay, June 11, 2025**.
+
+A bunch of MOPpers started throwing olympiad problems at each other when we were roaming through the IMSA halls. It was quite fun!
+
+The general community at MOP is quite friendly and inclusive. People play a lot of cards, and we also played pickleball.
+
+I’m rooming with Evan Fan, another junior. I like him quite a bit, and he reminds me of Allen Li from physics camp.
+
+<p align="center"><img src="images/mop1.png" width="200" /></p>
+
+I’m excited for MOP. I think that I will have a great time, and make a lot of friends.
+
 
 ## [The middle](#the-middle)
 
